--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="roundedImg">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
-    <style name="smallText">
-        <item name="android:textSize">14sp</item>
-    </style>
-    <style name="mediumText">
-        <item name="android:textSize">16sp</item>
-    </style>
-    <style name="mainText">
-        <item name="android:textSize">18sp</item>
-    </style>
-    <style name="bigText">
-        <item name="android:textSize">20sp</item>
-    </style>
-    <style name="hugeText">
-        <item name="android:textSize">24sp</item>
-    </style>
 
-    <style name="blackText">
+    <style name="regularText">
+        <item name="fontFamily">@font/ubuntu_regular</item>
         <item name="android:textColor">@color/blue</item>
     </style>
-    <style name="grayText">
+
+    <style name="mediumText">
+        <item name="fontFamily">@font/ubuntu_medium</item>
+    </style>
+
+    <style name="blackText" parent="regularText">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="blackTextMedium" parent="mediumText">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="grayText" parent="regularText">
         <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="whiteText" parent="regularText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    
+    <style name="smallBlackText">
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
