--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -66,13 +66,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@id/message_input_container"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:layout_above="@+id/message_bar"/>
 
     <!-- Контейнер для ввода сообщений -->
     <RelativeLayout
+        android:id="@+id/message_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/white"
