--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -12,9 +12,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_chat_avatar"
-        android:scaleType="centerCrop"
-        android:background="@drawable/avatar_bg"/>
+        android:src="@drawable/img_avatar"
+        android:scaleType="centerCrop"/>
 
     <!-- Контейнер для текста сообщения -->
     <LinearLayout
@@ -38,7 +37,6 @@
             android:id="@+id/message_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/message_input_bg"
             android:padding="8dp"
             android:text="Сколько истребителей было?!"
             android:textSize="16sp"
