--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,12 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="whiteText24sp" parent="whiteText">
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="blackText18sp" parent="blackText">
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
